--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -1,58 +1,26 @@
+# Pre-requisite: zi (https://github.com/z-shell/zi)
+# sh -c "$(curl -fsSL get.zshell.dev)" -- -i skip -b main
+typeset -A ZI
+ZI[BIN_DIR]="${HOME}/.zi/bin"
+source "${ZI[BIN_DIR]}/zi.zsh"
+autoload -Uz _zi
+(( ${+_comps} )) && _comps[zi]=_zi
+# end of zi init
+
+zi snippet OMZL::history.zsh
+
+zi light spaceship-prompt/spaceship-prompt
+zi light zsh-users/zsh-autosuggestions
+zi light zsh-users/zsh-syntax-highlighting
+
+
+zi is-snippet wait lucid for \
+  OMZP::{sdk,fzf} \
+    has'nodenv' \
+  OMZP::nodenv 
+  
 # If you come from bash you might have to change your $PATH.
-# export PATH=$HOME/bin:$HOME/.local/bin:/usr/local/bin:$PATH
-
-# Path to your Oh My Zsh installation.
-export ZSH="$HOME/.oh-my-zsh"
-
-# Set name of the theme to load 
-ZSH_THEME="spaceship"
-
-# Uncomment the following line to use case-sensitive completion.
-# CASE_SENSITIVE="true"
-
-# Uncomment the following line to use hyphen-insensitive completion.
-# Case-sensitive completion must be off. _ and - will be interchangeable.
-# HYPHEN_INSENSITIVE="true"
-
-# Uncomment one of the following lines to change the auto-update behavior
-# zstyle ':omz:update' mode disabled  # disable automatic updates
-# zstyle ':omz:update' mode auto      # update automatically without asking
-# zstyle ':omz:update' mode reminder  # just remind me to update when it's time
-
-# Uncomment the following line to change how often to auto-update (in days).
-# zstyle ':omz:update' frequency 13
-
-# Uncomment the following line if pasting URLs and other text is messed up.
-# DISABLE_MAGIC_FUNCTIONS="true"
-
-# Uncomment the following line to disable colors in ls.
-# DISABLE_LS_COLORS="true"
-
-# Uncomment the following line to disable auto-setting terminal title.
-# DISABLE_AUTO_TITLE="true"
-
-# Uncomment the following line to enable command auto-correction.
-# ENABLE_CORRECTION="true"
-
-# Uncomment the following line to display red dots whilst waiting for completion.
-# You can also set it to another string to have that shown instead of the default red dots.
-# e.g. COMPLETION_WAITING_DOTS="%F{yellow}waiting...%f"
-# Caution: this setting can cause issues with multiline prompts in zsh < 5.7.1 (see #5765)
-# COMPLETION_WAITING_DOTS="true"
-
-# Uncomment the following line if you want to disable marking untracked files
-# under VCS as dirty. This makes repository status check for large repositories
-# much, much faster.
-# DISABLE_UNTRACKED_FILES_DIRTY="true"
-
-# Plugins
-# Custom plugins  added to $ZSH_CUSTOM/plugins/
-# - https://github.com/zsh-users/zsh-autosuggestions
-# - https://github.com/zsh-users/zsh-syntax-highlighting.git
-plugins=(fzf sdk nodenv zsh-autosuggestions zsh-syntax-highlighting)
-
-source $ZSH/oh-my-zsh.sh
-
+export PATH=$HOME/bin:$HOME/.local/bin:$PATH
 
 # ---------------------------------------------------------------------------
 #  USER CONFIGURATION
@@ -137,6 +105,14 @@ function ssh() {
         tmux set-window-option automatic-rename on
     fi
 }
+
+export ZSH_TMUX_AUTOSTART=true
+export ZSH_TMUX_AUTOSTART_ONCE=true
+export ZSH_TMUX_AUTOCONNECT=true
+export ZSH_TMUX_DEFAULT_SESSION_NAME=build
+export ZSH_TMUX_CONFIG=$HOME/.tmux.conf
+
+zi snippet OMZP::tmux
 
 # ---------------------------------------------------------------------------
 #  Fzf
