--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -7,24 +7,24 @@ autoload -Uz _zi
 (( ${+_comps} )) && _comps[zi]=_zi
 # end of zi init
 
+# If you come from bash you might have to change your $PATH.
+export PATH=$HOME/bin:$HOME/.local/bin:$PATH
+
+if [[ -f "$HOME/.zshrc.local" ]]; then
+  source "$HOME/.zshrc.local"
+fi
+
 zi snippet OMZL::history.zsh
+zi snippet OMZL::directories.zsh
 
 zi light spaceship-prompt/spaceship-prompt
 zi light zsh-users/zsh-autosuggestions
 zi light zsh-users/zsh-syntax-highlighting
 
-
 zi is-snippet wait lucid for \
   OMZP::{sdk,fzf} \
     has'nodenv' \
   OMZP::nodenv 
-  
-# If you come from bash you might have to change your $PATH.
-export PATH=$HOME/bin:$HOME/.local/bin:$PATH
-
-# ---------------------------------------------------------------------------
-#  USER CONFIGURATION
-# ---------------------------------------------------------------------------
 
 export FAVORITE_COMMAND1="{{ .tmux_favorite1 }}"
 export FAVORITE_COMMAND2="{{ .tmux_favorite2 }}"
@@ -34,9 +34,6 @@ export FAVORITE_COMMAND4="{{ .tmux_favorite4 }}"
 alias cdd='cd {{ .deploydir }}'
 export cdd={{ .deploydir }}
 
-if [[ -f "$HOME/.zshrc.local" ]]; then
-  source "$HOME/.zshrc.local"
-fi
 
 # ---------------------------------------------------------------------------
 #  History
