document spaceship workaround

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -17,7 +17,9 @@ fi
 zi snippet OMZL::history.zsh
 zi snippet OMZL::directories.zsh
 
+# apply workaround for refresh: https://github.com/spaceship-prompt/spaceship-prompt/issues/1193
 zi light spaceship-prompt/spaceship-prompt
+
 zi light zsh-users/zsh-autosuggestions
 zi light zsh-users/zsh-syntax-highlighting
 
