--- a/dot_tmux.conf.tmpl
+++ b/dot_tmux.conf.tmpl
@@ -120,9 +120,13 @@ bind-key M-4 send-keys "$FAVORITE_COMMAND4"
 unbind r
 bind r source-file ~/.tmux.conf \; display-message "config reloaded!"
 
+# plugin fzf-session-switch
+set -g @fzf-goto-session 's'
+
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin "arcticicestudio/nord-tmux"
+set -g @plugin "brokenricefilms/tmux-fzf-session-switch"
 
 # run tpm
 run -b '~/.tmux/plugins/tpm/tpm'
