Disable tmux autostart

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -132,11 +132,10 @@ function ssh() {
     fi
 }
 
-export ZSH_TMUX_AUTOSTART=true
+export ZSH_TMUX_AUTOSTART=false
 export ZSH_TMUX_AUTOSTART_ONCE=false
 export ZSH_TMUX_AUTOCONNECT=true
 export ZSH_TMUX_DEFAULT_SESSION_NAME=build
-export ZSH_TMUX_CONFIG=$HOME/.tmux.conf
 
 zi snippet OMZP::tmux
 
