Replace OhMyZsh plugins

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -26,11 +26,8 @@ zi light spaceship-prompt/spaceship-prompt
 
 zi light zsh-users/zsh-autosuggestions
 zi light zsh-users/zsh-syntax-highlighting
-
-zi is-snippet wait lucid for \
-  OMZP::{sdk,fzf} \
-    has'nodenv' \
-  OMZP::nodenv 
+zi light ptavares/zsh-sdkman
+zi light mattberther/zsh-nodenv
 
 export FAVORITE_COMMAND1="{{ .tmux_favorite1 }}"
 export FAVORITE_COMMAND2="{{ .tmux_favorite2 }}"
