--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -7,6 +7,9 @@ autoload -Uz _zi
 (( ${+_comps} )) && _comps[zi]=_zi
 # end of zi init
 
+# init completion
+autoload -Uz compinit && compinit
+
 # Vi mode
 export KEYTIMEOUT=1
 bindkey -v
@@ -25,7 +28,6 @@ zi snippet OMZL::directories.zsh
 zi light spaceship-prompt/spaceship-prompt
 
 zi light ptavares/zsh-sdkman
-zi light zsh-users/zsh-autosuggestions
 zi light zsh-users/zsh-syntax-highlighting
 
 zi is-snippet wait lucid for \
@@ -136,6 +138,7 @@ function ssh() {
 export ZSH_TMUX_AUTOSTART=false
 export ZSH_TMUX_AUTOSTART_ONCE=false
 export ZSH_TMUX_AUTOCONNECT=true
+export ZSH_TMUX_CONFIG=$HOME/.tmux.conf
 export ZSH_TMUX_DEFAULT_SESSION_NAME=build
 
 zi snippet OMZP::tmux
