change session symbol in title

--- a/dot_tmux.conf.tmpl
+++ b/dot_tmux.conf.tmpl
@@ -45,7 +45,7 @@ setw -g pane-base-index 1   # make pane numbering consistent with windows
 set -g renumber-windows on # renumber windows when a window is closed
 
 set -g set-titles on                        # set terminal title
-set -g set-titles-string '❐ #S ● #I #W'
+set -g set-titles-string '□ #S ● #I #W'
 
 set -g display-panes-time 500 # slightly longer pane indicators display time
 
